# ml-praticals-ldrp

./: .gitignore  Consumer_Propensity.ipynb  client.py  pyproject.toml
e_commerce/: How to set up.docx
e_commerce/e_commerce/bigquery/: __init__.py  load_data.py
e_commerce/e_commerce/frame/: __init__.py
e_commerce/e_commerce_app/: main.py  pyproject.toml
e_commerce/e_commerce_app/e_commerce_app/: app.py  products.py
e_commerce/e_commerce_app/e_commerce_app/features/: features.csv  features.json
e_commerce/e_commerce_app/e_commerce_app/models/: lgbm_model.pkl
e_commerce/e_commerce_app/tests/: test_e_commerce_app.py
e_commerce/notebooks/: consumer_propensity.ipynb
nlp/: requirements.txt
nlp/data/: tweets.csv
nlp/nlp/: fetch.py
nlp/notebooks/: data_cleaning.ipynb  nlp_terminologies.ipynb  why_word2vec.ipynb  word2vec_project.ipynb
nlp/notebooks/data/: emojis.csv  hashtags.csv  mentions.csv  metrics.csv  urls.csv  users.csv
notebooks/: ecommerce_consumer_propensity.ipynb
