[tool.poetry]
name = "e_commerce_app"
version = "0.1.0"
description = ""
authors = ["Darsh <darsh@dxfactor.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
joblib = "^1.0.1"
lightgbm = "^3.2.0"
numpy = "^1.20.2"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
